GNOME Bugzilla – Bug 725729
Words completion provider: warning messages
Last modified: 2014-05-31 20:20:01 UTC
pbor saw these warning messages: GtkSourceView-WARNING **: scan line: 'start' doesn't start a line. GtkSourceView-WARNING **: Could not find word to remove in buffer (GError), this should not happen! Ideally, a unit test should be written and the bug fixed.
Fixed: https://git.gnome.org/browse/gtksourceview/commit/?id=09d73f4ae96872ce31ba192e7984eeb7b5596999 See also the two previous and two next commits.